# local-agent-workspace-manager

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  errors.py
apps/api/app/db/: database.py
apps/api/app/routers/: agents.py  dashboard.py  policies.py  runs.py  safety.py  schedules.py  settings.py  workspaces.py
apps/api/app/schemas/: agent.py  common.py  dashboard.py  policy.py  run.py  safety.py  schedule.py  settings.py  workspace.py
apps/api/app/services/: agent_service.py  cron_service.py  dashboard_service.py  policy_service.py  run_service.py  runner_service.py  runtime_preset_service.py  safety_service.py  schedule_service.py  schedule_worker_service.py  settings_service.py  workspace_service.py
apps/api/tests/: conftest.py  test_agents_and_schedules.py  test_config.py  test_dashboard_and_settings.py  test_health.py  test_mvp_flow.py  test_policies_and_workspaces.py  test_runner_service.py  test_runs.py  test_safety.py  test_seed_demo.py
apps/web/: README.md  package-lock.json  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  (+1 more)
docs/: architecture.md  backlog.md  codex-task-template.md  obsidian-vault-maintenance-copilot.md  prd.md  spec.md  tasks.md  testing-strategy.md  wireframes.md
docs/adr/: 0001-monorepo-and-stack.md  0002-simulated-runner-default.md  0003-real-execution-gate.md  0004-controlled-delete.md
scripts/: bootstrap_storage.py  seed_demo.py
(+45 files in other folders)
