[project]
name = "lawm-api"
version = "0.1.0"
description = "FastAPI backend for Local Agent Workspace Manager"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "pydantic>=2.5.3,<3.0",
  "pydantic-settings",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
